--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
   --purple: #069fff;
   --pink: #e83e8c;
   --red: #dc3545;
-  --orange: #069fff;
+  --orange: #ff7300;
   --yellow: #ffc107;
   --green: #28a745;
   --teal: #20c997;
