--- a/css/style.css
+++ b/css/style.css
@@ -10181,6 +10181,7 @@ a.text-dark:focus {
   }
 }
 
+/* inicio propaganda carrosel */
 .animation-marquee {
   display: inline-flex;
   white-space: nowrap;
@@ -10196,3 +10197,4 @@ a.text-dark:focus {
       transform: translateX(-50%);
   }
 }
+/* fim propaganda carrosel */
